<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attention Detector</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_actionselection">ActionSelection</string>
    <string name="title_activity_live_card_menu">LiveCardMenuActivity</string>
    <string name="open_app">Open App</string>
    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="cloudlet_ip">CLOUDLET_IP</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="m1">Listening Carefully</string>
    <string name="m2">Playing with Phone</string>
    <string name="m3">Sleeping Head Back</string>
    <string name="m4">Sleeping Head Down</string>
    <string name="m5">Looking out</string>
    <string name="m6">Cheating</string>
    <string name="m7">Note Taking</string>
    <string name="m8">Speaking with Friend</string>
    <string name="calibre">Calibrate</string>
    <string name="action_type">ACTION_TYPE</string>
    <string name="default_pipeline">
        {"@type": "edu.mit.media.funf.pipeline.BasicPipeline",
         "name": "default",
                "version":1,
		        "data": [
		                {"@type": "edu.mit.media.funf.probe.builtin.AccelerometerSensorProbe",
		                 "sensorDelay": "NORMAL"
		                },
		                {"@type": "edu.mit.media.funf.probe.builtin.GyroscopeSensorProbe",
		                 "sensorDelay": "NORMAL"
		                },
		                {"@type": "edu.mit.media.funf.probe.builtin.MagneticFieldSensorProbe",
		                 "sensorDelay": "NORMAL"
		                },
		                {"@type": "edu.mit.media.funf.probe.builtin.ProximitySensorProbe",
		                 "sensorDelay": "NORMAL"
		                },
		                {"@type": "edu.mit.media.funf.probe.builtin.LightSensorProbe",
		                 "sensorDelay": "NORMAL"
		                }
		        ]
        }
    </string>
</resources>
